Improved @media tags in css to avoid necessary overflows

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -165,7 +165,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1200px) {
   .hack4bengal__navbar {
     display: none !important;
   }
