--- a/src/pages/MorePrizesPage/MorePrizesPage.css
+++ b/src/pages/MorePrizesPage/MorePrizesPage.css
@@ -42,7 +42,7 @@
   width: 100%;
 } */
 
-@media screen and (min-width: 1380px) {
+@media screen and (min-width: 1000px) {
 
   .moreprizesbox-container,
   .moreprizesbox-container2 {
