--- a/src/sections/PartnersAndSponsorsSection/PartnersAndSponsorsSection.css
+++ b/src/sections/PartnersAndSponsorsSection/PartnersAndSponsorsSection.css
@@ -231,7 +231,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
   .hack4bengal__section6-content {
     font-size: 16px;
     line-height: 30px;
